[patch] catalog docs

--- a/docs/catalogs/packages/ibm-mas/8.11.29.md
+++ b/docs/catalogs/packages/ibm-mas/8.11.29.md
@@ -3,8 +3,15 @@ extra_breadcrumb_title_2: IBM Maximo Operator Catalog
 extra_breadcrumb_url_2: ../../../
 nav_title: Operator Catalog
 
-IBM Maximo Application Suite v9.0.4
+IBM Maximo Application Suite v8.11.29
 ================================================================================
+
+Release Notes
+--------------------------------------------------------------------------------
+### Bug Fixes and Security Updates
+- mobileapi update to update navigator and it's graphite version to v2.12.457 (#4381)
+- Remove sensitive logs - 811x (#4431)
+- kafka molecule creation timeout increase: 811 (#4453)
 
 Install Modes
 --------------------------------------------------------------------------------
@@ -102,7 +109,6 @@ Cluster Permissions
 | apps.mas.ibm.com                         | predictworkspaces                        | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | visualinspectionapps                     | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | visualinspectionappworkspaces            | create, delete, get, list, patch, update, watch                                  |
-| apps.mas.ibm.com                         | manageaccelerators                       | get, list, patch, update                                                         |
 | apps.mas.ibm.com                         | assistapps/status                        | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | assistapps/finalizers                    | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | assistworkspaces/status                  | create, delete, get, list, patch, update, watch                                  |
@@ -202,6 +208,7 @@ Cluster Permissions
 | authorization.openshift.io               | rolebindings                             | create, delete, deletecollection, get, list, patch, update, watch                |
 | authorization.openshift.io               | roles                                    | create, delete, deletecollection, get, list, patch, update, watch                |
 | iot.apps.mas.ibm.com                     | *                                        | create, delete, get, list, patch, update, watch                                  |
+| binding.operators.coreos.com             | servicebindings                          | *, create, delete, get, list, patch, update, watch                               |
 | image.openshift.io                       | builds                                   | create, delete, get, list, patch, update, watch                                  |
 | image.openshift.io                       | buildconfigs                             | create, delete, get, list, patch, update, watch                                  |
 | image.openshift.io                       | buildconfigs/instantiatebinary           | create, delete, get, list, patch, update, watch                                  |
@@ -218,12 +225,23 @@ Cluster Permissions
 | admissionregistration.k8s.io             | validatingwebhookconfigurations          | create, delete, get, list, patch, update                                         |
 | autoscaling                              | horizontalpodautoscalers                 | create, delete, deletecollection, get, list, patch, update                       |
 | security.openshift.io                    | securitycontextconstraints               | get, list, watch                                                                 |
-| asset-data-dictionary.ibm.com            | assetdatadictionaries                    | *                                                                                |
+| asset-data-dictionary.ibm.com            | assetdatadictionaries                    | *, get, list                                                                     |
 | asset-data-dictionary.ibm.com            | assetdatadictionaries/status             | *                                                                                |
 | asset-data-dictionary.ibm.com            | assetdatadictionaries/finalizers         | *                                                                                |
-| asset-data-dictionary.ibm.com            | datadictionaryworkspaces                 | *                                                                                |
+| asset-data-dictionary.ibm.com            | datadictionaryworkspaces                 | *, get, list                                                                     |
 | asset-data-dictionary.ibm.com            | datadictionaryworkspaces/status          | *                                                                                |
 | asset-data-dictionary.ibm.com            | datadictionaryworkspaces/finalizers      | *                                                                                |
+| core.mas.ibm.com                         | suites                                   | get, list                                                                        |
+| core.mas.ibm.com                         | workspaces                               | get, list                                                                        |
+| addons.mas.ibm.com                       | mviedges                                 | get, list                                                                        |
+| config.mas.ibm.com                       | jdbccfgs                                 | get, list                                                                        |
+| config.mas.ibm.com                       | kafkacfgs                                | get, list                                                                        |
+| config.mas.ibm.com                       | mongocfgs                                | get, list                                                                        |
+| config.mas.ibm.com                       | objectstoragecfgs                        | get, list                                                                        |
+| config.mas.ibm.com                       | pushnotificationcfgs                     | get, list                                                                        |
+| config.mas.ibm.com                       | smtpcfgs                                 | get, list                                                                        |
+| config.mas.ibm.com                       | watsonstudiocfgs                         | get, list                                                                        |
+| internal.mas.ibm.com                     | coreidps                                 | get, list                                                                        |
 
 Namespace Permissions
 --------------------------------------------------------------------------------
@@ -252,6 +270,7 @@ Namespace Permissions
 | truststore-mgr.ibm.com                   | truststores                              | create, delete, get, list, patch, update, watch                                  |
 | truststore-mgr.ibm.com                   | truststores/status                       | get                                                                              |
 | operator.ibm.com                         | operandrequests                          | create, delete, get, list, patch, update, watch                                  |
+| binding.operators.coreos.com             | servicebindings                          | create, delete, get, list, patch, update, watch                                  |
 | core.mas.ibm.com                         | suites                                   | create, delete, get, list, patch, update, watch                                  |
 | core.mas.ibm.com                         | suites/status                            | create, delete, get, list, patch, update, watch                                  |
 | core.mas.ibm.com                         | workspaces                               | delete, get, list, watch                                                         |
