--- a/docs/catalogs/packages/ibm-mas/9.0.18.md
+++ b/docs/catalogs/packages/ibm-mas/9.0.18.md
@@ -3,8 +3,20 @@ extra_breadcrumb_title_2: IBM Maximo Operator Catalog
 extra_breadcrumb_url_2: ../../../
 nav_title: Operator Catalog
 
-IBM Maximo Application Suite v9.0.4
+IBM Maximo Application Suite v9.0.18
 ================================================================================
+
+Release Notes
+--------------------------------------------------------------------------------
+### Bug Fixes and Security Updates
+- mobileapi update to update navigator and it's graphite version to v2.13.647 (#4382)
+- Add imgSrc CSP override to allow data url to be used when overriding the login page background image (90x) (#4386)
+- Remove Assist's Watson Discovery dependency (#4121)
+- Update sendmailapi with fix for permission error (#4413)
+- mobileapi update to update navigator and it's graphite version to v2.13.648 (#4424)
+- MASCORE-10785 Fix filebeat command params (#4420)
+- Remove sensitive logs - 90x (#4430)
+- Increase destroy timeout to deal with cluster delays - 9.0.x (#4452)
 
 Install Modes
 --------------------------------------------------------------------------------
