--- a/docs/catalogs/packages/ibm-mas/9.1.7.md
+++ b/docs/catalogs/packages/ibm-mas/9.1.7.md
@@ -3,8 +3,25 @@ extra_breadcrumb_title_2: IBM Maximo Operator Catalog
 extra_breadcrumb_url_2: ../../../
 nav_title: Operator Catalog
 
-IBM Maximo Application Suite v9.0.4
+IBM Maximo Application Suite v9.1.7
 ================================================================================
+
+Release Notes
+--------------------------------------------------------------------------------
+### Bug Fixes and Security Updates
+- mobileapi update to update navigator and it's graphite version to v3.1.624 (#4383)
+- Add imgSrc CSP override to allow data url to be used when overriding the login page background image (91x) (#4385)
+- Remove Assist's Watson Discovery dependency (#4119)
+- Backport read-only root filesystem support (disabled by default) (#4392)
+- internalapi 10.3.0 - Add internal versions of put/delete message APIs and update dependencies (#4421)
+- Update catalogapi image to support read-only enabled/disabled (#4425)
+- mobileapi update to update navigator and it's graphite version to v3.1.627 (#4423)
+- Updated mobileapi to avoid permission errors with new read-only flag - 9.1.x (#4436)
+- Updated internalapi to avoid permission errors with new read-only flag - 9.1.x (#4438)
+- Increase destroy timeout and improved molecule tests (#4449)
+- mobileapi update to update navigator and it's graphite version to v3.1.630 (#4455)
+- removed sensitive logs - 91x (#4429)
+- Add defaultSenderEmail to the /systeminfo internal API response (91x) (#4448)
 
 Install Modes
 --------------------------------------------------------------------------------
@@ -22,6 +39,7 @@ Service Accounts
 - ibm-mas-coreapi
 - ibm-mas-coreidp
 - ibm-mas-entitymgr-addons
+- ibm-mas-entitymgr-appcfg
 - ibm-mas-entitymgr-bascfg
 - ibm-mas-entitymgr-coreidp
 - ibm-mas-entitymgr-idpcfg
@@ -69,6 +87,7 @@ Cluster Permissions
 | rbac.authorization.k8s.io                | clusterrolebindings                      | create, delete, deletecollection, get, list, patch, update, watch                |
 | rbac.authorization.k8s.io                | roles                                    | *, create, delete, deletecollection, get, list, patch, update, watch             |
 | rbac.authorization.k8s.io                | clusterroles                             | *, create, delete, deletecollection, get, list, patch, update, watch             |
+| rbac.authorization.k8s.io                | serviceaccounts                          | create, delete, get, list, patch, update, watch                                  |
 | rbac.authorization.k8s.io                | clusterroles/finalizers                  | *                                                                                |
 | apps                                     | deployments                              | *, create, delete, get, list, patch, update, watch                               |
 | apps                                     | daemonsets                               | *, create, delete, get, list, patch, update, watch                               |
@@ -100,6 +119,8 @@ Cluster Permissions
 | apps.mas.ibm.com                         | optimizerworkspaces                      | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | predictapps                              | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | predictworkspaces                        | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesapps                           | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesworkspaces                     | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | visualinspectionapps                     | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | visualinspectionappworkspaces            | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | manageaccelerators                       | get, list, patch, update                                                         |
@@ -113,6 +134,10 @@ Cluster Permissions
 | apps.mas.ibm.com                         | assistrestores                           | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | assistrestores/status                    | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | assistrestores/finalizers                | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesapps/status                    | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesapps/finalizers                | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesworkspaces/status              | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesworkspaces/finalizers          | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | hputilitiesapps                          | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | hputilitiesapps/status                   | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | hputilitiesapps/finalizers               | create, delete, get, list, patch, update, watch                                  |
@@ -255,6 +280,32 @@ Namespace Permissions
 | core.mas.ibm.com                         | suites                                   | create, delete, get, list, patch, update, watch                                  |
 | core.mas.ibm.com                         | suites/status                            | create, delete, get, list, patch, update, watch                                  |
 | core.mas.ibm.com                         | workspaces                               | delete, get, list, watch                                                         |
-| config.mas.ibm.com                       | *                                        | create, delete, get, list, patch, update, watch                                  |
-| internal.mas.ibm.com                     | *                                        | create, delete, get, list, patch, update, watch                                  |
-| addons.mas.ibm.com                       | *                                        | delete, get, list, watch                                                         |
+| config.mas.ibm.com                       | appcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | bascfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | idpcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | jdbccfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | kafkacfgs                                | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | mongocfgs                                | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | objectstoragecfgs                        | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | pushnotificationcfgs                     | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | scimcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | slscfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | smtpcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | watsonstudiocfgs                         | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | coreidps                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | appcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | bascfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | idpcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | jdbccfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | kafkacfgs                                | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | mongocfgs                                | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | objectstoragecfgs                        | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | pushnotificationcfgs                     | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | scimcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | slscfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | smtpcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | watsonstudiocfgs                         | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | coreidps                                 | create, delete, get, list, patch, update, watch                                  |
+| addons.mas.ibm.com                       | genericaddons                            | delete, get, list, watch                                                         |
+| addons.mas.ibm.com                       | mviedges                                 | delete, get, list, watch                                                         |
+| addons.mas.ibm.com                       | replicadbs                               | delete, get, list, watch                                                         |
