--- a/docs/catalogs/packages/ibm-mas/9.2.0-pre.stable-6976.md
+++ b/docs/catalogs/packages/ibm-mas/9.2.0-pre.stable-6976.md
@@ -3,7 +3,7 @@ extra_breadcrumb_title_2: IBM Maximo Operator Catalog
 extra_breadcrumb_url_2: ../../../
 nav_title: Operator Catalog
 
-IBM Maximo Application Suite v9.0.4
+IBM Maximo Application Suite v9.2.0-pre.stable-6976
 ================================================================================
 
 Install Modes
@@ -22,6 +22,7 @@ Service Accounts
 - ibm-mas-coreapi
 - ibm-mas-coreidp
 - ibm-mas-entitymgr-addons
+- ibm-mas-entitymgr-appcfg
 - ibm-mas-entitymgr-bascfg
 - ibm-mas-entitymgr-coreidp
 - ibm-mas-entitymgr-idpcfg
@@ -69,6 +70,7 @@ Cluster Permissions
 | rbac.authorization.k8s.io                | clusterrolebindings                      | create, delete, deletecollection, get, list, patch, update, watch                |
 | rbac.authorization.k8s.io                | roles                                    | *, create, delete, deletecollection, get, list, patch, update, watch             |
 | rbac.authorization.k8s.io                | clusterroles                             | *, create, delete, deletecollection, get, list, patch, update, watch             |
+| rbac.authorization.k8s.io                | serviceaccounts                          | create, delete, get, list, patch, update, watch                                  |
 | rbac.authorization.k8s.io                | clusterroles/finalizers                  | *                                                                                |
 | apps                                     | deployments                              | *, create, delete, get, list, patch, update, watch                               |
 | apps                                     | daemonsets                               | *, create, delete, get, list, patch, update, watch                               |
@@ -100,6 +102,8 @@ Cluster Permissions
 | apps.mas.ibm.com                         | optimizerworkspaces                      | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | predictapps                              | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | predictworkspaces                        | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesapps                           | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesworkspaces                     | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | visualinspectionapps                     | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | visualinspectionappworkspaces            | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | manageaccelerators                       | get, list, patch, update                                                         |
@@ -113,6 +117,10 @@ Cluster Permissions
 | apps.mas.ibm.com                         | assistrestores                           | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | assistrestores/status                    | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | assistrestores/finalizers                | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesapps/status                    | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesapps/finalizers                | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesworkspaces/status              | create, delete, get, list, patch, update, watch                                  |
+| apps.mas.ibm.com                         | facilitiesworkspaces/finalizers          | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | hputilitiesapps                          | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | hputilitiesapps/status                   | create, delete, get, list, patch, update, watch                                  |
 | apps.mas.ibm.com                         | hputilitiesapps/finalizers               | create, delete, get, list, patch, update, watch                                  |
@@ -255,6 +263,32 @@ Namespace Permissions
 | core.mas.ibm.com                         | suites                                   | create, delete, get, list, patch, update, watch                                  |
 | core.mas.ibm.com                         | suites/status                            | create, delete, get, list, patch, update, watch                                  |
 | core.mas.ibm.com                         | workspaces                               | delete, get, list, watch                                                         |
-| config.mas.ibm.com                       | *                                        | create, delete, get, list, patch, update, watch                                  |
-| internal.mas.ibm.com                     | *                                        | create, delete, get, list, patch, update, watch                                  |
-| addons.mas.ibm.com                       | *                                        | delete, get, list, watch                                                         |
+| config.mas.ibm.com                       | appcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | bascfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | idpcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | jdbccfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | kafkacfgs                                | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | mongocfgs                                | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | objectstoragecfgs                        | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | pushnotificationcfgs                     | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | scimcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | slscfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | smtpcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | watsonstudiocfgs                         | create, delete, get, list, patch, update, watch                                  |
+| config.mas.ibm.com                       | coreidps                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | appcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | bascfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | idpcfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | jdbccfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | kafkacfgs                                | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | mongocfgs                                | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | objectstoragecfgs                        | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | pushnotificationcfgs                     | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | scimcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | slscfgs                                  | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | smtpcfgs                                 | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | watsonstudiocfgs                         | create, delete, get, list, patch, update, watch                                  |
+| internal.mas.ibm.com                     | coreidps                                 | create, delete, get, list, patch, update, watch                                  |
+| addons.mas.ibm.com                       | genericaddons                            | delete, get, list, watch                                                         |
+| addons.mas.ibm.com                       | mviedges                                 | delete, get, list, watch                                                         |
+| addons.mas.ibm.com                       | replicadbs                               | delete, get, list, watch                                                         |
