[patch] replace 31st dec catalog with 24th dec

--- a/docs/catalogs/v9-251231-ppc64le.md
+++ b/docs/catalogs/v9-251231-ppc64le.md
@@ -13,6 +13,10 @@ What's New
 -------------------------------------------------------------------------------
 
 - **MongoDb v8.0.17** support Running `mas update` will automatically upgrade existing MongoDbCommunity instances to MongoDb version v8.0.17 this requires MongoDb version to be on v7 or later.
+- **Security updates and bug fixes**
+    - IBM Maximo Application Suite Core Platform v9.0 and v9.1
+    - IBM Maximo Manage v9.0 and v9.1
+    - IBM Suite License Service v3.12
 
 Manual Installation
 -------------------------------------------------------------------------------
