--- a/docs/catalogs/v9-251231-amd64.md
+++ b/docs/catalogs/v9-251231-amd64.md
@@ -15,6 +15,23 @@ What's New
 -------------------------------------------------------------------------------
 
 - **MongoDb v8.0.17** support Running `mas update` will automatically upgrade existing MongoDbCommunity instances to MongoDb version v8.0.17 this requires MongoDb version to be on v7 or later.
+- **Cloud Pak For Data 5.2 support** Running 'mas update' will automatically upgrade existing Cloud Pak For Data instances to version 5.2.0 this requires Cloud Pak For Data to be on version 5.1.3. If Cloud Pak For Data is on an earlier version then an update to an intermediary catalog is required. Refer CPD v5.2 release notes [here](https://www.ibm.com/docs/en/software-hub/5.2.x?topic=overview-version-52-release-notes)
+- New **MAS 9.2 feature channels** for AI Service and Visual Inspection offering early access to some of the new features that will be included in the upcoming 9.2 release next year
+- **Security updates and bug fixes**
+    - IBM Maximo Application Suite Core Platform v8.10, v8.11, v9.0 and v9.1
+    - IBM Maximo Manage v8.6, v8.7, v9.0 and v9.1
+    - IBM Maximo IoT v8.7, v8.8, v9.0 and v9.1
+    - IBM Maximo Monitor v8.10, v8.11, v9.0 and v9.1
+    - IBM Maximo Optimizer v8.4, 8.5 and v9.1
+    - IBM Maximo Assist v9.1 and v9.0
+    - IBM Maximo Predict v8.8, v8.9, v9.0 and v9.1
+    - IBM Maximo Visual Inspection v8.9, v9.0 and v9.1
+    - IBM Maximo Real Estate and Facilities v9.1
+    - IBM Maximo AI Service v9.1
+    - IBM Maximo Location Service for Esri v9.0 and v9.1
+    - IBM Suite License Service v3.12
+
+
 
 !!! important
     MAS 8.10 and 8.11 standard support and software updates end on 30th April 2026, to ensure you are able to continue to receive monthly security updates and bug fixes we advise all customers to begin making upgrade plans for MAS 9.0 if you have not already done so.
